# spector

./: .gitattributes  README.md
bfs/: .gitignore  README.md
bfs/benchmarks/: .gitignore
bfs/graphs/: .gitignore  reg_d3_n100000.txt
bfs/scripts/: .gitignore  1_generate_graph.py  1_generate_regular_graph.py  1_generate_rtree.py  2_generate_params.py  3_estimateResults.py  4_parseEstimations.py  5_compileFull.py  6_runPrograms.py  7_run.py  7_runGpu.py  README.md
bfs/src/: .gitignore  LICENSE  Makefile  bfs.h  bfs_fpga.cl  knobs.h  knobs.h.template  my_bfs.cpp
common/cmake/: common.cmake
common/include/: opencl_utils.h
common/scripts/: generateDesigns.py  parseResults.py  runDesigns.py  runDesignsGpu.py
dct/: README.md
dct/cl_gen/: .gitignore  dct_cl_gen.py  dct_synthesize0.sh  dct_synthesize11.sh  dct_synthesize12.sh  (+6 more)
fir/: README.md
histogram/: README.md
mergesort/: README.md
mm/: README.md
mm/src/: run.sh  (+21 more)
normals/: README.md
normals/src/: .gitignore  CMakeLists.txt  Makefile  compute_normals.h  knobs.h  knobs.h.template  main.cpp  normals.cl
results_and_analysis/: bfs_dense.mat  bfs_dense_est_tp.mat  bfs_sparse.mat  bfs_sparse_est_tp.mat  dct.mat  dct_est_tp.mat  fir.mat  fir_est_tp.mat  hist.mat  hist_est_tp.mat  mergesort.mat  mergesort_est_tp.mat  mm.mat  mm_est_tp.mat  my_mm_analysis.mat  normals.mat  normals_est_tp.mat  nw.mat  nw_est_tp.mat  plot_all_DS.m  plot_design_space.m  plot_knobs.m  sobel.mat  sobel_est_tp.mat  spmv_5000.mat  spmv_500000.mat  spmv_500000_est_tp.mat  spmv_5000_est_tp.mat
sobel/: README.md
spmv/: README.md
(+232 files in other folders)
